--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,28 @@
-version: '3.9'
 
 volumes:
-        static:
+        djstatic:
                 name: djstatic
                 driver: local
                 driver_opts:
-                        device: ${HOME}/data/djstatic
-                        o: bind
-                        type: none
-        frontend:
-                name: frontend
-                driver: local
-                driver_opts:
-                        device: ${HOME}/data/frontend
+                        device: data/djstatic
                         o: bind
                         type: none
         postgres:
                 name: postgres
                 driver: local
                 driver_opts:
-                        device: ${HOME}/data/postgres
+                        device: data/postgres
+                        o: bind
+                        type: none
+        frontend:
+                name: frontend
+                driver: local
+                driver_opts:
+                        device: srcs/frontend
                         o: bind
                         type: none     
 networks:
-  inception:
+  tnet:
     name: tnet
     driver: bridge
 
@@ -113,15 +112,4 @@ services:
     networks:
       - tnet
     restart: always
-  adminerneo:
-    container_name: adminer
-    build:
-      context: .
-      dockerfile: containers/adminerneo/4/Dockerfile
-    depends_on:
-      - postgres
-    ports:
-      - "9091"
-    networks:
-      - tnet
-    restart: always
+  
