change project structure

--- a/containers/django/Dockerfile
+++ b/containers/django/Dockerfile
@@ -2,3 +2,9 @@ FROM python:3.12-alpine
 
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+WORKDIR /app
+
+ADD ../../srcs/backend/django /app
+
+CMD [ "python", "main.py" ]
