add uv project to django backend

--- a/containers/django/Dockerfile
+++ b/containers/django/Dockerfile
@@ -5,6 +5,6 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 WORKDIR /app
 
-ADD ../../srcs/backend/django /app
+ADD ../../srcs/backend/djback /app
 
 CMD [ "python", "main.py" ]
