add empty django project

--- a/containers/django/Dockerfile
+++ b/containers/django/Dockerfile
@@ -6,5 +6,10 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 WORKDIR /app
 
 ADD ../../srcs/backend/djback /app
+COPY containers/django/entrypoint.sh /tmp/entrypoint.sh
 
-CMD [ "python", "main.py" ]
+RUN uv sync 
+
+ENTRYPOINT [ "sh", "/tmp/entrypoint.sh" ]
+
+CMD [ "uv", "run", "gunicorn", "-b", "0.0.0.0:8000", "djback.wsgi" ]
