--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -19,6 +19,16 @@ server {
         etag off;
     }
 
+    location /api {
+        proxy_pass  http://django:8000/;
+        # proxy_set_header Host $host;
+    }
+    
+    location /admin {
+        proxy_pass  http://django:8000/admin;
+        # proxy_set_header Host $host;
+    }
+
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
         expires max;
         log_not_found off;
