--- a/containers/adminer/Dockerfile
+++ b/containers/adminer/Dockerfile
@@ -10,11 +10,9 @@ RUN apk update && apk upgrade && apk add --no-cache \
     php83-common php83-iconv php83-gd php83-curl php83-xml \
     php83-imap php83-cgi php83-pdo php83-soap php83-posix \
     php83-gettext php83-ldap php83-ctype php83-dom php83-simplexml \
-    php83-bz2 php83-zip && \
+    php83-bz2 php83-zip php83-pgsql && \
     ln -s /usr/bin/php83 /usr/bin/php && \
-    curl -L -o index.php https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php && \
+    curl -L -o index.php https://github.com/vrana/adminer/releases/download/v4.16.0/adminer-4.16.0.php && \
     chmod 755 index.php
-
-EXPOSE 9090
 
 CMD [ "php", "-S", "[::]:9090", "-t", "/var/www/" ]
