--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,6 @@ services:
       - "443:443"
     depends_on:
       - django
-      - adminer
     volumes:
       - frontend:/var/www/
     networks:
@@ -48,24 +47,25 @@ services:
       context: .
       dockerfile: containers/django/Dockerfile
     environment:
+        DJ_DEBUG: ${DJ_DEBUG}
         DOMAIN_NAME: ${DOMAIN_NAME}
+        DJ_SECRET_KEY: ${DJ_SECRET_KEY}
         DB_HOST: ${DB_HOST}
+        DB_PORT: ${DB_PORT}
         DB_NAME: ${DB_NAME}
         DB_USER: ${DB_USER}
         DB_PASSWORD: ${DB_PASSWORD}
-        DJ_ADMIN: ${DJ_ADMIN}
-        DJ_ADM_PASS: ${DJ_ADM_PASS}
-        DJ_ADM_EMAIL: ${DJ_ADM_EMAIL}
+        DJANGO_SUPERUSER_NAME: ${DJ_ADMIN}
+        DJANGO_SUPERUSER_PASSWORD: ${DJ_ADM_PASS}
+        DJANGO_SUPERUSER_EMAIL: ${DJ_ADM_EMAIL}
         DJ_REDIS_PASSWORD: ${DJ_REDIS_PASSWORD}
         DJ_CACHE_KEY_SALT: ${DJ_CACHE_KEY_SALT}
     ports:
-      - "8080"
+      - "8000"
     depends_on:
       - postgres
     volumes:
       - djstatic:/app/static/
-    env_file:
-      - .env
     networks:
       - tnet
     restart: always
@@ -75,16 +75,16 @@ services:
     build: 
       context: .
       dockerfile: containers/postgres/Dockerfile
-      args:
-        - POSTGRES_DB=${DB_NAME}
-        - POSTGRES_USER=${DB_USER}
-        - POSTGRES_PASSWORD=${DB_PASSWORD}
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
         - "5432:5432"
-    volumes:
-      - postgres:/var/lib/postgresql/data/
-    env_file:
-      - .env
+    # volumes:
+    #   - postgres:/var/lib/postgresql/data/
+    # env_file:
+    #   - .env
     networks:
       - tnet
     restart: always
@@ -108,7 +108,7 @@ services:
     depends_on:
       - postgres
     ports:
-      - "9090"
+      - "9090:9090"
     networks:
       - tnet
     restart: always
