--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -19,14 +19,21 @@ server {
         etag off;
     }
 
-    location /api {
-        proxy_pass  http://django:8000/;
+    location /api/ {
+        proxy_pass  http://django:8000/api/;
         # proxy_set_header Host $host;
     }
     
-    location /admin {
-        proxy_pass  http://django:8000/admin;
+    location /admin/ {
+        proxy_pass  http://django:8000/admin/;
         # proxy_set_header Host $host;
+    }
+
+        location ^~ /static/ {
+        alias /var/www/djstatic/;
+        try_files $uri $uri/ =404;
+        expires max;
+        access_log off;
     }
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
