--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
                 name: djstatic
                 driver: local
                 driver_opts:
-                        device: ${HOME}/data/djstatic
+                        device: ${PWD}/data/djstatic
                         o: bind
                         type: none
         pgdata:
