add UserProfile and media root in Docker containers and Django

--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -23,14 +23,24 @@ server {
         proxy_pass  http://django:8000/api/;
         # proxy_set_header Host $host;
     }
-    
+
+# Django admin site
     location /admin/ {
         proxy_pass  http://django:8000/admin/;
         # proxy_set_header Host $host;
     }
 
+# Location for Django static files
         location ^~ /static/ {
         alias /var/www/djstatic/;
+        try_files $uri $uri/ =404;
+        expires max;
+        access_log off;
+    }
+
+# Location for Django media files
+            location ^~ /media/ {
+        alias /var/www/djmedia/;
         try_files $uri $uri/ =404;
         expires max;
         access_log off;
