--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ volumes:
                         device: ${PWD}/data/djstatic
                         o: bind
                         type: none
+        djmedia:
+                name: djmedia
+                driver: local
+                driver_opts:
+                        device: ${PWD}/data/djmedia
+                        o: bind
+                        type: none
         pgdata:
                 # name: pgdata
                 # driver: local
@@ -39,6 +46,7 @@ services:
     volumes:
       - frontend:/var/www/
       - djstatic:/var/www/djstatic/
+      - djmedia:/var/www/djmedia/
     networks:
       - tnet
     restart: always
@@ -67,6 +75,7 @@ services:
       - postgres
     volumes:
        - djstatic:/app/static/
+       - djmedia:/app/media/
     networks:
       - tnet
     restart: always
