--- a/srcs/backend/djback/pyproject.toml
+++ b/srcs/backend/djback/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "djangorestframework==3.15.2",
     "gunicorn==22.0.0",
     "markdown==3.7",
-    "psycopg2-binary>=2.9.10",
+    "psycopg2-binary==2.9.10",
+    "pillow==11.1.0",
 ]
 
 [dependency-groups]
