--- a/containers/django/Dockerfile
+++ b/containers/django/Dockerfile
@@ -5,13 +5,13 @@ COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 WORKDIR /app
 
-ADD ../../srcs/backend/djback /app
+ADD ../../srcs/backend/transa /app
 COPY containers/django/entrypoint.sh /tmp/entrypoint.sh
 
 RUN uv sync --no-cache
 
 ENTRYPOINT [ "sh", "/tmp/entrypoint.sh" ]
 
-# CMD [ "uv", "run", "gunicorn", "-b", "0.0.0.0:8000", "djback.wsgi" ]
+# CMD [ "uv", "run", "gunicorn", "-b", "0.0.0.0:8000", "transa.wsgi" ]
 # CMD ["uv", "run", "python3", "manage.py", "runserver", "0.0.0.0:8000"]
-CMD ["sh", "-c", "if [ \"$DJANGO_MODE\" = \"dev\" ]; then exec uv run python3 manage.py runserver 0.0.0.0:8000; else exec uv run gunicorn -b 0.0.0.0:8000 djback.wsgi:application; fi"]
+CMD ["sh", "-c", "if [ \"$DJANGO_MODE\" = \"dev\" ]; then exec uv run python3 manage.py runserver 0.0.0.0:8000; else exec uv run gunicorn -b 0.0.0.0:8000 transa.wsgi:application; fi"]
