--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "markdown==3.7",
     "psycopg2-binary==2.9.10",
     "pillow==11.1.0",
+    "djangorestframework-simplejwt>=5.5.0",
 ]
 
 [dependency-groups]
