--- a/.env_test
+++ b/.env_test
@@ -6,6 +6,7 @@ DB_USER=pgdbuser
 DB_PASSWORD=SuperSecretPassword
 
 # Django configuration
+DJANGO_MODE=stage
 DJ_ADMIN=iamadmin
 DJ_ADM_PASS=passpasspass
 DJ_ADM_EMAIL=admin@42.fr
@@ -13,6 +14,9 @@ DJ_DEBUG=True
 DJ_SECRET_KEY=supersecretkey
 DJ_REDIS_PASSWORD=redis_password
 DJ_CACHE_KEY_SALT=test_cache_salt
+
+# Server config
+NGINX_PORT_HTTPS=443
 
 # Domain configuration
 DOMAIN_NAME=trans.42.fr
