--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "psycopg2-binary==2.9.10",
     "pillow==11.1.0",
     "djangorestframework-simplejwt>=5.5.0",
+    "django-oauth-toolkit>=3.0.1",
 ]
 
 [dependency-groups]
