start refactoring the oauth2.0

--- a/.env_test
+++ b/.env_test
@@ -15,6 +15,12 @@ DJ_SECRET_KEY=supersecretkey
 DJ_REDIS_PASSWORD=redis_password
 DJ_CACHE_KEY_SALT=test_cache_salt
 
+# OAuth2.0 config
+OA_CLIENT_ID=client_id
+OA_SECRET=secret
+OA_REDIR_URLS="api/callback/"
+OA_POST_LOUT_REDIR_URLS="/"
+
 # Server config
 NGINX_PORT_HTTPS=443
 
