--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,10 @@ services:
         DJANGO_SUPERUSER_EMAIL: ${DJ_ADM_EMAIL}
         DJ_REDIS_PASSWORD: ${DJ_REDIS_PASSWORD}
         DJ_CACHE_KEY_SALT: ${DJ_CACHE_KEY_SALT}
+        OA_CLIENT_ID: ${OA_CLIENT_ID}
+        OA_SECRET: ${OA_SECRET}
+        OA_REDIR_URLS: ${OA_REDIR_URLS}
+        OA_POST_LOUT_REDIR_URLS: ${OA_POST_LOUT_REDIR_URLS}
     ports:
       - "8000:8000"
     depends_on:
