--- a/.env_test
+++ b/.env_test
@@ -18,7 +18,7 @@ DJ_CACHE_KEY_SALT=test_cache_salt
 # OAuth2.0 config
 OA_CLIENT_ID=client_id
 OA_SECRET=secret
-OA_REDIR_URLS="api/callback/"
+OA_REDIR_URL="api/callback/"
 OA_POST_LOUT_REDIR_URLS="/"
 
 # Server config
