--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
         DJ_CACHE_KEY_SALT: ${DJ_CACHE_KEY_SALT}
         OA_CLIENT_ID: ${OA_CLIENT_ID}
         OA_SECRET: ${OA_SECRET}
-        OA_REDIR_URLS: ${OA_REDIR_URLS}
+        OA_REDIR_URLS: ${OA_REDIR_URL}
         OA_POST_LOUT_REDIR_URLS: ${OA_POST_LOUT_REDIR_URLS}
     ports:
       - "8000:8000"
