fix http->https redirect

--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -1,4 +1,10 @@
 server {
+    listen 80;
+    server_name gbreana.42.fr;
+    return 301 https://$host$request_uri;
+}
+
+server {
     listen 443 ssl;
     server_name gbreana.42.fr www.gbreana.42.fr;
     root /var/www/trans;
