--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "pillow==11.1.0",
     "djangorestframework-simplejwt>=5.5.0",
     "requests>=2.32.3",
+    "pyotp>=2.9.0",
+    "qrcode>=8.0",
 ]
 
 [dependency-groups]
