--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name gbreana.42.fr;
+    server_name localhost;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name gbreana.42.fr www.gbreana.42.fr;
+    server_name localhost;
     root /var/www/trans;
     index index.html index.htm;
 
@@ -26,8 +26,18 @@ server {
     }
 
     location /api/ {
-        proxy_pass  http://django:8000/api/;
-        # proxy_set_header Host $host;
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, PATCH, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+    }
+    proxy_pass  http://django:8000/api/;
+    # proxy_set_header Host $host;
     }
 
 # Django admin site
