--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "requests>=2.32.3",
     "pyotp>=2.9.0",
     "qrcode>=8.0",
+    "django-cors-headers>=4.7.0",
 ]
 
 [dependency-groups]
