--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -16,6 +16,10 @@ server {
     ssl_session_timeout 30m;
     keepalive_timeout 70;
 
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_vary on;
+
     location / {
         try_files $uri $uri/ /index.html?$args;
         add_header Last-Modified $date_gmt;
@@ -24,10 +28,10 @@ server {
         expires off;
         etag off;
     }
-
+# API endpoints
     location /api/ {
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+            add_header 'Access-Control-Allow-Origin' $http_origin always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, PATCH, DELETE' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, Accept' always;
@@ -38,6 +42,32 @@ server {
     }
     proxy_pass  http://django:8000/api/;
     # proxy_set_header Host $host;
+    }
+
+# WebSockets for chat and remote player
+    location /chat/ {
+        proxy_pass http://django:8001/chat/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_read_timeout 86400;
+
+        add_header Vary Origin;
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials true always;
+    }
+    location /remote/ {
+        proxy_pass http://django:8001/remote/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_read_timeout 86400;
+
+        add_header Vary Origin;
+        add_header Access-Control-Allow-Origin $http_origin always;
+        add_header Access-Control-Allow-Credentials true always;
     }
 
 # Django admin site
