--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -46,7 +46,7 @@ server {
 
 # WebSockets for chat and remote player
     location /ws/ {
-        proxy_pass http://django:8001;
+        proxy_pass http://django:8001/ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
