--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pyotp>=2.9.0",
     "qrcode>=8.0",
     "django-cors-headers>=4.7.0",
+    "redis>=5.2.1",
 ]
 
 [dependency-groups]
