--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -42,6 +42,10 @@ server {
     }
     proxy_pass  http://django:8000/api/;
     # proxy_set_header Host $host;
+
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Proto $scheme;
     }
 
 # WebSockets for chat and remote player
