--- a/srcs/backend/transa/pyproject.toml
+++ b/srcs/backend/transa/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "django-cors-headers>=4.7.0",
     "redis>=5.2.1",
     "django-stubs>=5.2.0",
+    "websockets>=12.0"
 ]
 
 [dependency-groups]
