--- a/containers/nginx/config/gbreana.42.fr.conf
+++ b/containers/nginx/config/gbreana.42.fr.conf
@@ -1,11 +1,12 @@
 server {
     listen 80;
     server_name localhost;
-    return 301 https://$host$request_uri;
+    return 301 https://$host:4443$request_uri;
 }
 
 server {
     listen 443 ssl;
+    listen 4443 ssl;
     server_name localhost;
     root /var/www/trans;
     index index.html index.htm;
@@ -40,12 +41,13 @@ server {
             add_header 'Content-Length' 0;
             return 204;
     }
-    proxy_pass  http://django:8000/api/;
-    # proxy_set_header Host $host;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-Host $host;
-    proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass  http://django:8000/api/;
+        proxy_set_header Host              $http_host;
+        proxy_set_header X-Forwarded-Host  $http_host;
+        proxy_set_header X-Forwarded-Port  $server_port;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
 # WebSockets for chat and remote player
@@ -54,7 +56,13 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Forwarded-Host   $http_host;
+        proxy_set_header X-Forwarded-Port   $server_port;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+
         proxy_read_timeout 86400;
 
         add_header Vary Origin;
@@ -67,7 +75,13 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
+        proxy_set_header Host               $http_host;
+        proxy_set_header X-Forwarded-Host   $http_host;
+        proxy_set_header X-Forwarded-Port   $server_port;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+
         proxy_read_timeout 86400;
 
         add_header Vary Origin;
@@ -78,7 +92,12 @@ server {
 # Django admin site
     location /admin/ {
         proxy_pass  http://django:8000/admin/;
-        # proxy_set_header Host $host;
+        proxy_set_header Host              $http_host;
+        proxy_set_header X-Forwarded-Host  $http_host;
+        proxy_set_header X-Forwarded-Port  $server_port;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
     }
 
 # Location for Django static files
