add host settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
         DJANGO_SUPERUSER_NAME: ${DJ_ADMIN}
         DJANGO_SUPERUSER_PASSWORD: ${DJ_ADM_PASS}
         DJANGO_SUPERUSER_EMAIL: ${DJ_ADM_EMAIL}
+        DJANGO_ALLOWED_HOSTS: ${DJ_ALLOWED_HOSTS}
         DJ_REDIS_PASSWORD: ${DJ_REDIS_PASSWORD}
         DJ_CACHE_KEY_SALT: ${DJ_CACHE_KEY_SALT}
         OA_CLIENT_ID: ${OA_CLIENT_ID}
