--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
         DJANGO_SUPERUSER_PASSWORD: ${DJ_ADM_PASS}
         DJANGO_SUPERUSER_EMAIL: ${DJ_ADM_EMAIL}
         DJANGO_ALLOWED_HOSTS: ${DJ_ALLOWED_HOSTS}
+        DJANGO_EXT_PORT: ${NGINX_PORT_HTTPS}
         DJ_REDIS_PASSWORD: ${DJ_REDIS_PASSWORD}
         DJ_CACHE_KEY_SALT: ${DJ_CACHE_KEY_SALT}
         OA_CLIENT_ID: ${OA_CLIENT_ID}
